--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "node ./postinstall.js"
+    "postinstall": "node ./postinstall.js",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
@@ -22,6 +23,8 @@
     "tinymce": "^6.7.0"
   },
   "devDependencies": {
+    "cypress": "^13.5.1",
+    "cypress-real-events": "^1.11.0",
     "eslint": "^8.51.0",
     "eslint-config-next": "13.5.4",
     "eslint-config-standard": "^17.1.0",
