--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "cypress:open": "cypress open"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.18",
+    "@mui/material": "^5.14.18",
     "@reduxjs/toolkit": "^1.9.7",
     "@tinymce/tinymce-react": "^4.3.0",
     "axios": "^1.5.1",
@@ -18,6 +22,7 @@
     "lodash": "^4.17.21",
     "next": "^14.0.2",
     "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "redux-thunk": "^2.4.2",
     "tinymce": "^6.7.0"
